--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.1.2",
     "html-webpack-plugin": "^5.3.1",
     "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^1.3.9",
     "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "css-loader": "^5.1.2",
+    "uuid": "^8.3.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
