--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack",
-    "start": "webpack serve --hot"
+    "start": "webpack serve --hot",
+    "start:dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +22,16 @@
     "html-webpack-plugin": "^5.3.1",
     "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^1.3.9",
+    "nodemon": "^2.0.7",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "store2": "^2.12.0",
     "uuid": "^8.3.2"
   }
 }
